# driggsby

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  dist-workspace.toml  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: pr-security.yml  release.yml  security-background.yml
crates/driggsby-cli/: Cargo.toml  README.md
crates/driggsby-cli/src/: json_file.rs  lib.rs  main.rs  runtime_paths.rs  user_guidance.rs
crates/driggsby-cli/src/auth/: browser.rs  config.rs  discovery.rs  dpop.rs  login.rs  loopback.rs  mod.rs  oauth.rs  pkce.rs  url_security.rs
crates/driggsby-cli/src/broker/: client.rs  daemon.rs  file_secret_store.rs  grants.rs  installation.rs  keyring_secret_store.rs  launch.rs  mod.rs  remote_mcp.rs  remote_mcp_tests.rs  remote_session.rs  resolve_secret_store.rs  secret_store.rs  secrets.rs  server.rs  server_tests.rs  session.rs  types.rs
crates/driggsby-cli/src/cli/: client_id.rs  commands.rs  connect.rs  existing_mcp_config.rs  format.rs  known_client.rs  mod.rs  supported_mcp_config.rs
crates/driggsby-cli/src/cli/connect/: tests.rs
crates/driggsby-cli/src/shim/: mod.rs
npm/driggsby/: README.md  install.ts  package.json
npm/driggsby/lib/: process.ts
scripts/: check_github_action_pins.sh  check_source_line_lengths.sh
scripts/release/: check-npm-publish-surface.ts  npm-package-behavior-check.ts  sign-notarize-macos-artifacts.sh
