[package]
name = "driggsby"
description = "CLI helper for configuring Driggsby MCP clients"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
publish = false
readme = "README.md"
license.workspace = true

[[bin]]
name = "driggsby"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
